--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <div>
                     <p>Ola Pessoinhas!</p>
                     <span class="opicoes">
-                        <i class="fas fa-edit"></i>
-                        <i class="fas fa-trash-alt"></i>
+                        <i onclick="editarPublicao(this)" class="fas fa-edit"></i>
+                        <i onclick="deletarPublicao(this)" class="fas fa-trash-alt"></i>
                     </span>
                 </div>
 
