--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <h1>Lista de Projetos Cripto</h1>
+    <h1>Lista de Projetos</h1>
     <div class="container">
         <div class="tela">
             <form id="form">
